# marketplace_api

./: .gitignore  .pre-commit-config.yaml  DBDeliveryOptions.json  DBDiscount.json  DBGroundStaff.json  DBItem.json  DBItemSnapshot.json  DBTransaction.json  DBTransactionDiscount.json  DBTransactionItem.json  DBUser.json  Dockerfile  README.md  api_start.sh  design.txt  docker-compose.yml  generate_mock_data.py  get_data.py  ingest_data.py  logs.ipynb  main.py  pyproject.toml  read_db.sql  request_log.json  requirements.txt  send_request.py  te.ipynb
.github/workflows/: tests.yml
_archived_/: items.json  items_stocks.json  randomize_items_stock_details copy.ipynb  randomize_items_stock_details.ipynb
_archived_/app_v1/: design.drawio  requirements.txt
_archived_/app_v1/datamodels/: datamodels.py  transaction.py  user.py
_archived_/app_v1/db/: db.py
_archived_/app_v1/db/postgres/: CREATE_DB.sql
_archived_/app_v1/routers/: auth.py  items.py  transactions.py
_archived_/app_v1/testing/: openapi_examples.py
_archived_/app_v1/testing/openapi/: users.py
app/: app.py  main.py
app/auth/: datamodels.py  utils.py
app/configs/: datamodels.py  utils.py
app/constants/: constants.py
app/database/: dbmodels.py  utils.py
app/datamodels/: configs.py  item.py  log.py  response.py  transaction.py  user.py
app/dbmodels/: dbmodels.py
app/exceptions/: exceptions.py  handlers.py
app/logger/: utils.py
app/middleware/: middleware.py
app/routers/: auth.py  items.py  transactions.py  user.py  users.py
app/routers/auth/: auth.py  service.py
app/routers/items/: datamodels.py  items.py  service.py
app/routers/transactions/: datamodels.py  service.py  transactions.py  utils.py
app/routers/user/: datamodels.py  service.py  user.py
app/services/auth/: service.py
app/services/items/: service.py
app/services/transactions/: service.py  utils.py
app/services/users/: service.py
app/utils/: auth.py  configs.py  db.py  logger.py  middleware.py  openapi_examples.py  request.py  routers.py  scheduler.py  transactions.py
auth/: auth.py
data_models/: categories.py  categories_types.py  item.py  mongo.py  req_body.py  user.py
datamodels/: item.py  response.py  transaction.py  user.py
db/: db.py
db/mock_data/: generate_mock_data.py  items_clothes.json  items_shoes.json
db/mock_data/mock_values/: items.py  transactions.py  users.py
db/postgres/: CREATE_DB.sql  CREATE_TABLES.sql  test.ipynb
db_setup/: CREATE_TABLES.sql
development/: ingest_mock_data.py  openapi_examples.py
development/mock_data/: DBDeliveryOptions.json  DBGroundStaff.json  DBItem.json  DBItemSnapshot.json  DBTransactionFinalized.json
ex_reqs/: create_items_1.json  create_items_2.json  create_items_3.json  create_items_4.json  create_users_1.json  get_categories.json  get_items.json
exceptions/: exceptions.py
postgres/: CREATE_DB.sql  CREATE_TABLES.sql  INSERT_MOCK_DATA.sql  REMOVE_DB.sql  generate_mock_data.py  init.sh  mock_values.py  utils.py
postgres/db_setup/: CREATE_TABLES.sql  discounts.json  ground_staff.json  items.json  users.json
postgres/mock_data/: items.json  transactions.json  users.json
postgres/utils/: mock_values.py  utils.py
routers/: auth.py  chats.py  home.py  items.py  tickets.py  transactions.py  users.py
testing/: ingest_data.py  openapi_examples.py
testing/mock_data/: delivery_options.json  items.json
testing/openapi/: items.py  transactions.py  users.py
tests/: conftest.py  utils.py
tests/auth/: test_utils.py
tests/configs/: test_utils.py
tests/database/: test_utils.py
tests/fixtures/: test.environment
tests/openapi/: items.py
tests/routers/auth/: test_auth.py  test_service.py
tests/test_endpoints/: test_app.py  test_router_users.py
tests/test_utils/: test_auth.py  test_configs.py  test_db.py  utils.py
utils/: auth.py  configs.py  db.py  routers.py  scheduler.py
(+4 files in other folders)
