[project]
name = "marketplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.121.1",
    "fastapi-utilities>=0.3.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "uvicorn>=0.38.0",
    "duckdb>=1.4.3",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.44",
    "bcrypt>=5.0.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 100
include = ["app/**/*.py"]
[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E4", "E7", "E9",  # pycodestyle
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "ANN205",  # Missing return type annotation for staticmethod
    "ANN206",  # Missing return type annotation for classmethod
]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.ruff.lint.isort]
# Configure import ordering
force-single-line = false
force-sort-within-sections = true
known-first-party = ["app"]  # Your app module
known-third-party = ["fastapi", "sqlmodel", "pydantic"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]